Fixing some styling and fixing some white space

--- a/src/app/pages/liked/liked.component.css
+++ b/src/app/pages/liked/liked.component.css
@@ -16,7 +16,7 @@
 }
 
 .card-custom-horizontal {
-    background-color: #efefef;
+    background-color: #E8E8E8;
     display: flex;
     margin-bottom: 1em;
   }
@@ -25,7 +25,6 @@
     background-color: #242424;
     max-width: 200px; 
     height: 300px; 
-    
   }
   
   .card-custom-img .cover {
@@ -38,7 +37,7 @@
   } 
   
   .card-custom-body {
-    background-color: #efefef;
+    
     background-color:	#E8E8E8;
     padding: 1em;
     padding: 70px 0;
